👱🚙 Checkpoint ./public/index.html:21845626/12

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       /><br /><br />
       <label for="taskduedate"> Due Date </label><br />
       <input type="datetime-local" id="taskduedate"/><br />
-      <p> Priority </p>
+      <p> Priority <br>
       <input
         type="radio"
         id="priority1"
@@ -28,7 +28,7 @@
       <input type="radio" id="priority2" name="priority" value="med_priority" />
       <label for="priority2"> Medium Priority </label><br />
       <input type="radio" id="priority3" name="priority" value="low_priority" />
-      <label for="priority3"> Low Priority </label><br /><br />
+      <label for="priority3"> Low Priority </label><br /><br /></p>
       <button>Add Task</button>
     </form>
     <br />
