--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
   <div class="top">
     <h1>Lab Time/Space Slot Booking</h1>
   </div>
-  <div class="split left" id="div1">
+  <div class="split">
+  <div class="left" id="div1">
     <h2>Contact Information</h2>
     <form>
       <fieldset>
@@ -102,7 +103,7 @@
       </p>
     </form>
   </div>
-  <div class="split right" id="div2">
+  <div class="right" id="div2">
     <h2>All Appointments</h2>
     <table>
       <thead>
@@ -119,6 +120,7 @@
       </thead>
       <tbody></tbody>
     </table>
+  </div>
   </div>
   </body>
 </html>
