--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="public/css/style.css" type="text/css">
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8" />
   </head>
