Created promises and added barebone table generator

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
     <h1 font-weight: bold;>Welcome to Speed Clicker</h1>
@@ -17,7 +17,7 @@
       <button class="playbtn" id='startbtn' onclick="start()">Start</button>
     </div>
 
-    <a href=# class="playbtn" id="clickbtn" onclick="add()"><img src="button.png"></a>
+    <a class="playbtn" id="clickbtn" onclick="add()"><img src="button.png"></a>
     
     <div>
       <p id='currentclicks' class='poststart'>0 Points</p>
