fixed starter setup

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
     <div>
       <form action="">
-        <p class='postgame'>
+        <p id="inputname" class="postgame">
           Please input your name:
         </p>
         <input type='text' id='yourname' class='postgame' value="">
