--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,39 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/scripts.js"></script>
   </head>
   <body>
+    <div class="flex-container">
+    <h1>
+      Project Manager
+    </h1>
+    <h2>
+      Submit a Project Here:
+    </h2>
     <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+      <input type="text" id="pName"  onfocus="this.value = ''"  placeholder = "Project Name">
+      <input type ="text" id="pDesc"  onfocus="this.value = ''"  placeholder ="Project Description">
+      <input type ="text" id="pSDate"  onfocus="this.value = ''"  placeholder="Start Date MM-DD-YYYY">
+      <input type = "text" id="pEDate"  onfocus="this.value = ''" placeholder = "End Date MM-DD-YYYY">
+      <button>Submit</button>
     </form>
-  </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
+      <p id="status"></p>
+        
+  <h2>
+     Current Projects
+  </h2>
+<table id ="projectTable">
+  <tr>
+    <th>Name</th>
+    <th>Description</th>
+    <th>Start Date</th>
+    <th>End Date</th>
+    <th>Priority</th>
+    </tr>
+</table>
+      </div>
+    </body>
+  
 </html>
