😅🏤 Checkpoint ./public/index.html:21845626/224 ./public/css/style.css:21845626/394

--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,15 @@
       Your Work Advisor
     </h1>
     <form action="">
-      <label for="yourtask"> Task </label><br />
+      <label for="yourtask" class="headers"> Task </label><br />
       <input
         type="text"
         id="yourtask"
         value="Enter your task here"
       /><br /><br />
-      <label for="taskduedate"> Due Date </label><br />
-      <input type="datetime-local" id="taskduedate" /><br />
-      <p>
+      <label for="taskduedate" class="headers"> Due Date </label><br />
+      <input type="datetime-local" id="taskduedate"/><br />
+      <p class="headers">
         Priority <br />
         <input
           type="radio"
@@ -42,7 +42,7 @@
         />
         <label for="priority3" id="low"> Low Priority </label><br /><br />
       </p>
-      <button>Add Task</button>
+      <button class="submit">Add Task</button>
     </form>
     <br />
 
