Added some prerequisites to the project.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       <button class="playbtn" id='startbtn' onclick="start()">Start</button>
     </div>
 
-    <a class="playbtn" id="clickbtn" onclick="add()"><img src="button.png"></a>
+    <a class="poststart" id="clickbtn" onclick="add()"><img src="button.png"></a>
     
     <div>
       <p id='currentclicks' class='poststart'>0 Points</p>
@@ -25,7 +25,7 @@
 
     <div>
       <form action="">
-        <p id="inputname" class="postgame">
+        <p id="inputname"class="postgame">
           Please input your name:
         </p>
         <input type='text' id='yourname' class='postgame' value="">
