--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,21 @@
 <!doctype html>
 <html lang="en">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/scripts.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Quicksand&display=swap" rel="stylesheet">
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
   </head>
   <body>
+    <h1> To-do list</h1>
     <form action="">
-      <input type='text' id='yourname' value="your name here">
+      <input type='text' id='taskName' value="your task here">
+      <input type='text' id='expected' value="number of hours">
       <button>submit</button>
+      <button id='delete'>delete last task</button>
     </form>
+    <h2>Current Tasks:</h2>
+      <ul id='tasks'> </ul>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
