Began Server Functionality
added get method for retrieving table data from the server
added post method for adding individual entries to the server

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
       <input type ="text" id="pDesc"  onfocus="this.value = ''"  placeholder ="Project Description">
       <input type ="text" id="pSDate"  onfocus="this.value = ''"  placeholder="Start Date MM-DD-YYYY">
       <input type = "text" id="pEDate"  onfocus="this.value = ''" placeholder = "End Date MM-DD-YYYY">
-      <button>Submit</button>
+      <button id="submit">Submit</button>
+      <button id="get">
+      get
+      </button>
     </form>
       <p id="status"></p>
         
@@ -33,9 +36,10 @@
     <th>Start Date</th>
     <th>End Date</th>
     <th>Priority</th>
-    </tr>
+  </tr>
 </table>
       </div>
     </body>
+  
   
 </html>
