Add update and delete functionality

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,14 @@
     <form action="">
       <input type='text' id='username' placeholder="Username">
       <input type='guess' id='guess' placeholder="Guess a number">
-      <button>submit</button>
+      <button id="submit">submit</button>
+      <button id="delete">delete</button>
     </form>
 
-
+    <table>
+      <tr><th>Username----</th><th>Guess----</th><th>Status----</th><th>Total Attempts----</th><th>Most Recent Submission----</th></tr>
+      <tr><td>placeholder</td><td>12</td><td>Too High</td><td>921</td><td>09/15/2020</td></tr>
+    </table>
 
   </body>
 </html>
