changed to fitness score instead of pace

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<link href="/js/scripts.js"
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
@@ -23,7 +24,7 @@
           <th>Route</th>
           <th>Time</th>
           <th>Distance</th>
-          <th>Pace</th>
+          <th>Fitness</th>
         </tr>
       </thead>
       <tbody>
