--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,84 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
-  </body>
-  <script>
 
-  const submit = function( e ) {
+<head>
+  <title>CS4241 Assignment 2</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kufam">
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+  <h1 class="heading">Game High Scores!</h1>
+  <p>Please enter your initials, score, location here:</p>
+  <form action="" id='form'>
+    <input type='text' maxlength="3" id='yourname' value="AAA">
+    <input type="number" id='score' value="000000">
+    <input type='text' id='location' value='your location here'>
+    <button>Submit</button>
+  </form>
+  <table id='datatable'>
+    <thead>
+      <tr>
+        <th>Rank</th>
+        <th>Initials</th>
+        <th>Score</th>
+        <th>Location</th>
+      </tr>
+    </thead>
+    <tbody id='scoretable'>
+    </tbody>
+  </table>
+</body>
+<script>
+
+  const submit = function (e) {
     // prevent default form action from being carried out
     e.preventDefault()
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+    const nameinput = document.querySelector('#yourname'),
+      scoreinput = document.querySelector('#score'),
+      locationinput = document.querySelector('#location'),
+      table = document.getElementById('scoretable'),
+      json = { yourname: nameinput.value, score: scoreinput.value, location: locationinput.value, position: '' },
+      body = JSON.stringify(json)
 
-    fetch( '/submit', {
-      method:'POST',
-      body 
+    fetch('/submit', {
+      method: 'POST',
+      body
     })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
+      .then((appdata) => appdata.json())
+      .then((json) => {
+        addToTable(json);
+      })
 
-    return false
+      return false
   }
+       const addToTable = (data) => {
+         const scoretable = document.getElementById('scoretable');
+         scoretable.innerHTML = '';
+         data.forEach(element => {
+           scoretable.innerHTML += `
+           <tr>
+              <td class='positiondata'>${element.position}</td>
+              <td class='namedata'>${element.yourname}</td>
+              <td class='scoredata'>${element.score}</td>
+              <td class='locationdata'>${element.location}</td>
+            </tr>
+            `;
+         });
+         
+         }
 
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
+  window.onload = function () {
+    const button = document.querySelector('button')
     button.onclick = submit
-  }
+    fetch('/load')
+    .then((appdata) => appdata.json())
+      .then((json) => {
+        addToTable(json);
+      })
+    }
+</script>
 
-  </script>
 </html>
